Changed size_1 to size_2 in Q5

--- a/resources/notebooks/our_first_numpy.ipynb
+++ b/resources/notebooks/our_first_numpy.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 265,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-265-ca79f47bcd5c>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-265-ca79f47bcd5c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Authors: jtyalor && vinguyen\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "    Authors: jtyalor && vinguyen"
    ]
@@ -23,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.20967967 0.65420359 0.97281915 0.11035037]\n",
-      " [0.40373185 0.66377501 0.7459784  0.88447342]\n",
-      " [0.50721885 0.86067304 0.95705166 0.17739538]]\n"
+      "[[0.58945397 0.41870404 0.93458061 0.84449098]\n",
+      " [0.42851594 0.78564233 0.36824495 0.98110918]\n",
+      " [0.77265359 0.04387724 0.2536306  0.8086237 ]]\n"
      ]
     }
    ],
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +116,7 @@
        "(1, 15)"
       ]
      },
-     "execution_count": 784,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 269,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 270,
    "metadata": {
     "scrolled": true
    },
@@ -196,10 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73a0a42d68>"
+       "<matplotlib.image.AxesImage at 0x7f198867c940>"
       ]
      },
-     "execution_count": 786,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -229,48 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " ...\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]]\n",
-      "[[0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " ...\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]\n",
-      " [0.00000000e+00 9.97008973e-04 1.99401795e-03 ... 9.98005982e-01\n",
-      "  9.99002991e-01 1.00000000e+00]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73a09a0588>"
+       "<matplotlib.image.AxesImage at 0x7f19885cfeb8>"
       ]
      },
-     "execution_count": 787,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,10 +273,10 @@
     "#d = np.full((size_2), a_very_usefull_function((size_2)))\n",
     "#c.resize(d.shape)# if (c < d) else d.resize(c.shape)\n",
     "e = np.full((size_1,size_2), a_very_usefull_function((size_2)))\n",
-    "print(e)\n",
+    "# print(e)\n",
     "#print(c)\n",
     "#print(d)\n",
-    "print(e)\n",
+    "# print(e)\n",
     "e_plot = np.matrix(e)\n",
     "#e_plot = np.matrix(e);\n",
     "plot.imshow(e_plot)"
@@ -313,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 272,
    "metadata": {
     "scrolled": true
    },
@@ -328,10 +307,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73a096dfd0>"
+       "<matplotlib.image.AxesImage at 0x7f19885a7b00>"
       ]
      },
-     "execution_count": 788,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -357,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -370,10 +349,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73a08d3668>"
+       "<matplotlib.image.AxesImage at 0x7f19885845f8>"
       ]
      },
-     "execution_count": 789,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -428,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 275,
    "metadata": {
     "scrolled": true
    },
@@ -542,10 +521,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73a08b7c18>"
+       "<matplotlib.image.AxesImage at 0x7f19884edf98>"
       ]
      },
-     "execution_count": 791,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 276,
    "metadata": {
     "scrolled": false
    },
@@ -593,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 793,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 794,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 802,
+   "execution_count": 286,
    "metadata": {
     "scrolled": true
    },
@@ -981,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 809,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 814,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1097,13 +1076,6 @@
     "    return\n",
     "filter_sierra(img)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
